--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "url": "https://github.com/activeprospect/leadconduit-integration-standard.git"
   },
   "scripts": {
-    "test": "mocha test/inbound"
+    "test": "mocha test/inbound",
+    "fixlint": "eslint . --fix",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@activeprospect/indexer": "^1.3.1",
@@ -19,13 +21,12 @@
     "leadconduit-default": "^2.9.3",
     "leadconduit-integration": "^0.2.0",
     "lodash": "^4.17.15",
-    "mime-content": "0.0.7",
+    "mime-content": "~0.0.9",
     "mimeparse": "^0.1.4",
     "xmlbuilder": "^8.2.2"
   },
   "devDependencies": {
-    "chai": ">= 1.9.0",
-    "leadconduit-types": "^4.8.2",
-    "mocha": ">= 1.17.0"
+    "@activeprospect/integration-dev-dependencies": "^1.1.8",
+    "leadconduit-types": "^4.8.2"
   }
 }
